# Xe-Forge

./: .env.example  .gitignore  CLAUDE.md  EXAMPLES.md  README.md  TILE.md  VTUNE.md  pyproject.toml
.claude/agents/: tool-runner.md
.claude/commands/: optimize-kernel.md
.github/workflows/: ruff.yaml
examples/attention/: 1_FlashAttention_Fwd.py  1_FlashAttention_Fwd.yaml
examples/fused/: 81_Gemm_Swish_Divide_Clamp_Tanh_Clamp.py  81_Gemm_Swish_Divide_Clamp_Tanh_Clamp.yaml  95_Matmul_Add_Swish_Tanh_GELU_Hardtanh.py  95_Matmul_Add_Swish_Tanh_GELU_Hardtanh.yaml  99_Matmul_GELU_Softmax.py  99_Matmul_GELU_Softmax.yaml
examples/gemm/: 14_Gemm_Divide_Sum_Scaling.py  14_Gemm_Divide_Sum_Scaling.yaml  39_Gemm_Scale_BatchNorm.py  39_Gemm_Scale_BatchNorm.yaml  45_Gemm_Sigmoid_LogSumExp.py  45_Gemm_Sigmoid_LogSumExp.yaml
examples/mixed_ops/: 55_Matmul_MaxPool_Sum_Scale.py  55_Matmul_MaxPool_Sum_Scale.yaml  68_Matmul_Min_Subtract.py  68_Matmul_Min_Subtract.yaml
examples/reduction/: 84_Gemm_BatchNorm_Scaling_Softmax.py  84_Gemm_BatchNorm_Scaling_Softmax.yaml
examples/tile_search/: tune_fa2_decode.yaml  tune_fa2_llama3.yaml  tune_fa2_novel_models.yaml  tune_gemm_basic.yaml
knowledge_base/: correctness.yaml  fusion_patterns.yaml  implementation_reference.md  memory_patterns.yaml  optimization_strategies.md  persistent_kernel_patterns.yaml  workflow_details.md  xpu_optimizations.yaml
knowledge_base/common/: algorithmic_patterns.yaml
knowledge_base/examples/: MMSoftx.py  MMTanh.py  TritonSigmGemm.py  conv2d_relu_bias_nhwc.py  gemm_activation_optimized.py  gemm_activation_unoptimized.py  gemm_scale.py  gemm_sigm.py  gemm_sum.py  gemmelem.py  gemmsoft.py  index.yaml  matmul_at_optimized.py  matmul_at_unoptimized.py  matmul_max.py  matt_elem.py
knowledge_base/gluon/xpu/: gluon_xpu_patterns.yaml
knowledge_base/sycl/xpu/: cutlass_sycl_framework.yaml  llm_workload_shapes.yaml  real_model_shapes.yaml  xetla_patterns.yaml
knowledge_base/triton/cuda/: cuda_optimizations.yaml
knowledge_base/triton/xpu/: autotuning_patterns.yaml  dtype_optimizations.yaml  implementation_reference.md
runners/: test_kb_examples.py
src/xe_forge/: __init__.py  cli.py  config.py  dsl_registry.py  models.py  pipeline.py  planner.py  trajectory.py
src/xe_forge/agents/: __init__.py  analyzer_agent.py  base.py  cover.py  generator_agent.py  optimizer_agent.py  react_agent.py
src/xe_forge/claude/: __init__.py  generator.py
src/xe_forge/core/: __init__.py  analyze_kernel.py  benchmark.py  device_query.py  executor.py  kernel_analyzer.py  profiler.py  spec_loader.py  sycl_executor.py  trial_manager.py  validate_triton.py  validator.py  xpu_profiler.py  xpu_query.py
src/xe_forge/engines/: __init__.py  base.py  claude_engine.py  dspy_engine.py
src/xe_forge/knowledge/: __init__.py  loader.py  patterns.py
src/xpu_forge/: __init__.py  cli.py  config.py
templates/: gemm_epilogue_template.py  gemm_template.py  reduction_template.py
test_kernels/: 14_Gemm_Divide_Sum_Scaling.py  14_Gemm_Divide_Sum_Scaling.yaml  1_FlashAttention_Fwd.py  1_FlashAttention_Fwd.yaml  39_Gemm_Scale_BatchNorm.py  39_Gemm_Scale_BatchNorm.yaml  45_Gemm_Sigmoid_LogSumExp.py  45_Gemm_Sigmoid_LogSumExp.yaml  55_Matmul_MaxPool_Sum_Scale.py  55_Matmul_MaxPool_Sum_Scale.yaml  68_Matmul_Min_Subtract.py  68_Matmul_Min_Subtract.yaml  70_Gemm_Sigmoid_Scaling_ResidualAdd.yaml  81_Gemm_Swish_Divide_Clamp_Tanh_Clamp.py  81_Gemm_Swish_Divide_Clamp_Tanh_Clamp.yaml  84_Gemm_BatchNorm_Scaling_Softmax.py  84_Gemm_BatchNorm_Scaling_Softmax.yaml  95_Matmul_Add_Swish_Tanh_GELU_Hardtanh.py  95_Matmul_Add_Swish_Tanh_GELU_Hardtanh.yaml  99_Matmul_GELU_Softmax.py  99_Matmul_GELU_Softmax.yaml
tests/: test_spec_loader.py
tests/trials/: test_registry.py
(+69 files in other folders)
