[project]
name = "xe-forge"
version = "0.1.1"
description = "Multi-stage kernel optimization for GPU computing"
authors = [{ name = "Intel Labs" }]
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24.0",
  "pydantic>=2.0.0",
  "dspy-ai>=3.1.3",
  "litellm>=1.0.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
  "httpx>=0.24.0",
  "ai-bench @ git+https://github.com/libxsmm/AI-bench@e44bf55031beb4bc6268f7fa3f38505bd69a2d34",
]

[project.optional-dependencies]
intel = [
  "torch==2.11+xpu",
]
nvidia = [
  "torch>=2.0.0",
]
wandb = ["weave>=0.52.24"]

[project.scripts]
xe-forge = "xe_forge.cli:main"

[dependency-groups]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-strategy = "unsafe-best-match"
conflicts = [
  [
    { extra = "intel" },
    { extra = "nvidia" },
  ],
]

[tool.uv.sources]
torch = { index = "pytorch" }
triton-xpu = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl"

[tool.hatch.build.targets.wheel]
packages = ["src/xe_forge"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["test_kernels", "knowledge_base/**/examples", "outputs/kernels"]


[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "Q",   # flake8-quotes
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "RUF", # ruff-specific rules
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "F821",   # undefined name (dspy dynamic attrs)
  "B008",   # function call in default arg
  "B006",   # mutable default arg
]

[tool.ruff.lint.isort]
known-first-party = ["xe_forge"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

